--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="text-wrapper">
                 <div class="reveal project">
-                    <a href="https://sexual.mom" class="project-image">
+                    <a href="https://github.com/sesjaphp/mybio" class="project-image">
                         <img src="https://images.sexual.mom/i3jb5tokx7prb5p2lrtuwxjbr/d" alt="project image">
                     </a>
                     <div class="project-description">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="reveal project">
-                    <a href="https://sexual.mom" class="project-image">
+                    <a href="https://github.com/sesjaphp/modern-sale-page" class="project-image">
                         <img src="https://images.sexual.mom/upi1rxi2pu8ldfgn1yxuxoedv/d" alt="project image">
                     </a>
                     <div class="project-description">
